scss/_navbar.scss
.navbar {
  position: relative;
  z-index: $zindex-navbar;
  height: $navbar-height;
  background-color: #fff;
  box-shadow: $shadow-hover;

  a,
  a:hover,
  a:focus {
    text-decoration: none;
  }

  &.navbar-fixed-top {
    position: fixed;
    width: 100%;
  }

  // Jumbo variation
  &.navbar-jumbo {
    height: $navbar-jumbo-height;

    .navbar-brand {
      margin-top: $navbar-jumbo-brand-margin-top;
    }

    .navbar-item {
      > a {
        margin-top: $navbar-jumbo-link-margin-top;
      }
    }
  }

}

///
/// Brand (application name)
///

.navbar-brand {
  display: block;
  float: left;
  width: $navbar-brand-width;
  padding-top: $navbar-link-padding-top;
  padding-bottom: $navbar-link-padding-bottom;
  margin-top: $navbar-brand-margin-top;
  font-size: $navbar-brand-font-size;
  text-align: center;
  line-height: 1;
}

///
/// Links (nav menu)
///

.navbar-links {
  @include clearfix();
  display: block;
  float: left;
  padding-left: 0;
  margin-bottom: 0;
}

.navbar-item {
  display: block;
  float: left;

  > a {
    display: block;
    font-size: $navbar-link-font-size;
    line-height: 1;
    margin-top: $navbar-link-margin-top;
    padding: $navbar-link-padding-top $navbar-link-padding-x $navbar-link-padding-bottom;
  }

  &.active > a {
    // background-color: darken($navbar-bg, 10%);
  }
}

///
/// User profile
///

.navbar-profile {
  position: relative;
  float: right;
  margin-top: $profile-margin-top;
  text-align: right;

  .profile-username,
  .profile-company {
    display: block;
    margin-right: $profile-img-size + ($grid-gutter-width / 2);
    line-height: 1.2;
  }

  .profile-username {
    font-size: $navbar-link-font-size;
  }

  .profile-company {
    font-size: $navbar-link-font-size * .85;
  }

  .profile-image {
    display: block;
    position: absolute;
    top: 50%;
    right: 0;
    width: $profile-img-size;
    height: $profile-img-size;
    padding-top: calc-padding-y($profile-img-size, $profile-img-text-size);
    margin-top: -($profile-img-size / 2);
    font-size: $profile-img-text-size;
    line-height: 1.1;
    text-align: center;
    border-radius: 50%;
  }
}

// Utility for when using navbar-fixed-top
.padding-top-toolbar {
  padding-top: $navbar-height;

  &-jumbo {
    padding-top: $navbar-jumbo-height;
  }
}

@each $variant, $props in $navbar-variants {
  .navbar-#{ $variant } {
    background-color: map-get($props, bg);

    .navbar-brand,
    .navbar-item > a {
      &,
      &:hover,
      &:active,
      &:focus,
      &:visited {
        color: map-get($props, color);
      }
    }

    // Dropdown lists
    @if map-get($props, dark) {
      .navbar-item > .dropdown-toggle:focus {
        color: $teal;
      }
    }


    // User profile section
    .profile-username {
      font-size: $navbar-link-font-size;
      color: map-get($props, color);
    }

    .profile-company {
      font-size: $navbar-link-font-size * .85;
      color: map-get($props, color-subdued);
    }

    .profile-image {
      background-color: map-get($props, color);
      color: map-get($props, bg);
    }
  }
}

///
/// Command bar
///

.command-bar {
  // position: relative;
  // z-index: $zindex-navbar;
  padding-top: $command-bar-padding-y;
  padding-bottom: $command-bar-padding-y;
  background-color: $command-bar-bg;
  // box-shadow: $shadow-hover;

  &-actions {
    list-style-type: none;
    padding-left: 0;
    margin-bottom: 0;

    > li {
      display: inline-block;

      + li {
        margin-left: 1.5rem;
      }
    }
  }

  &-icon {
    font-size: $font-size-lg;
    line-height: $font-size-base;
    vertical-align: top;
    padding-right: .5rem;
  }

  &.command-bar-fixed-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: $zindex-navbar;
  }
}

